Replaced "Find new commands" link with "Your Skins" on the navigation bar.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -28,10 +28,9 @@
   <ul id="nav">
     <li><a href="about:ubiquity">Home</a></li>
     <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
+    <li><a href="chrome://ubiquity/content/skinlist.html">Your Skins</a></li>
     <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-    <!-- <li><a href="chrome://ubiquity/content/skinlist.html">Your Skins</a></li> -->
     <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">Tutorial</a></li>
-    <li><a href="https://labs.toolness.com/ubiquity-herd/">Find New Commands</a></li>
   </ul>  
 </div>
 
