--- a/ubiquity/chrome/content/preview.html
+++ b/ubiquity/chrome/content/preview.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 </head>
 <body id="previewbody">
-<div id="preview"></div>
+<div id="ubiquity-preview"></div>
 </body>
 <script src="preview.js"></script>
 </html>
