--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,14 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
-<script src="resource://ubiquity-scripts/jquery.js"></script>
-<script type="text/javascript;version=1.7" src="linkrel_codesource.js"></script>
-<script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
-<script type="text/javascript;version=1.7" src="test_suggestion_memory.js"></script>
-<script type="text/javascript;version=1.7" src="tests.js"></script>
-<script type="text/javascript;version=1.7" src="safebox_tests.js"></script>
-<script type="text/javascript;version=1.7" src="test.js"></script>
 <script type="text/javascript;version=1.7">
+Components.utils.import("resource://ubiquity-tests/framework.js");
+Components.utils.import("resource://ubiquity-tests/test_all.js");
+
 function startTestSuite() {
   var outputElement = document.getElementById("test-output");
   var suite = new TestSuite(new HtmlTestResponder(outputElement),
