applied Andrew Smith's patch for #291 - now we can toggle the availability of new verbs individualy.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -40,9 +40,13 @@
     <option value=".author">Author</option>
     <option value=".license">License</option>
     <option value=".homepage">Homepage</option>
+    <option value=".active">Status</option>
     <!--<option value=".subscribedate">Date Subscribed</option>
     <option value=".updatedate">Date Updated</option>-->
   </select>
+  <span id="checkbox instructions">
+    Check a checkbox to activate a command: uncheck it to disable that command.
+  </span>
 </div>
 
 <ul id="command-list"></ul>
