Added a link to the command feed migration page from about:ubiquity.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -110,13 +110,14 @@ extension.
 
 
 <div class="col-four">
-  <h2 class="top">Ubiquity 0.1.2 Released!</h2>
+  <h2 class="top">Ubiquity 0.1.3 Release Candidate Released!</h2>
 
-  <p>We've just released the second patch for Ubiquity, which fixes a
-  lot of bugs and offers new features.  Feel free to check out the <a
-  href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.2_Release_Notes_(Raging_Stream)">release
-  notes</a> for more information.</p>
-  
+  <p>Thanks for trying out the latest release candidate.  If you're
+  wondering where your old command feed subscriptions went, check out
+  our handy <a
+  href="chrome://ubiquity/content/annotation_migration.html">Command
+  Feed Migration page</a>.  Sorry for the inconvenience!</p>
+
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
   <h2 class="top">Introduction Movie</h2>
