Removed the outdated skin command from experimental command feed. Also, removed the link to experimental commands on about:ubiquity because the subscription doesn't work. It ought to be moved to the standard-feeds folder.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -93,9 +93,9 @@ extension.
   
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
-  <p>Help us test our 
+  <!-- <p>Help us test our 
     <a href="chrome://ubiquity/content/experimental-commands.html">
-      experimental commands</a>!</p>
+      experimental commands</a>!</p> -->
       
   <div id="command-feed-graveyard-div">
     <h2>Feed Graveyard</h2>
