Added a Share button for the skin editor.

--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -42,7 +42,8 @@
   <ul class="button-list">
     <li>
       <a type="button" class="button" href="javascript:saveCustomSkin();">Save</a>
-      After you save, open Ubiquity and you can see the changes (if your current skin is Custom, of course).
+      <a type="button" class="button" href="javascript:pasteToGist();">Share</a>
+      After you save, open Ubiquity and you can see the changes (if your current skin is Custom).
       <br/> When you're done, share your skins with us! =)
     </li>
     <br/><br/>
