Updated herd URL to its new location at https://ubiquity.mozilla.com/herd/.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -54,7 +54,7 @@
   
   <p><strong>Take</strong> the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">Ubiquity tutorial</a> to master the basics.</p>
 
-  <p><strong>Help us</strong>. Subscribe to the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">Herd</a>, which will add your data to the <a href="https://labs.toolness.com/ubiquity-herd">dashboard</a></a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
+  <p><strong>Help us</strong>. Subscribe to the <a href="https://ubiquity.mozilla.com/herd/command-feed/">Herd</a>, which will add your data to the <a href="https://ubiquity.mozilla.com/herd">dashboard</a></a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
     
 
   
@@ -72,7 +72,7 @@
   <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.</p>
   
   <p><strong>Share</strong> your commands. Post it on the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">herd command</a> which will then display your command on the <a href="https://labs.toolness.com/ubiquity-herd/">dashboard</a>.</p>
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://ubiquity.mozilla.com/herd/command-feed/">herd command</a> which will then display your command on the <a href="https://ubiquity.mozilla.com/herd/">dashboard</a>.</p>
   
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
