Removed annotation migration page and changed about:ubiquity to reference 0.2pre.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -93,13 +93,7 @@
 
 
 <div class="col-four">
-  <h2 class="top">Ubiquity 0.1.3 Release Candidate Released!</h2>
-
-  <p>Thanks for trying out the latest release candidate.  If you're
-  wondering where your old command feed subscriptions went, check out
-  our handy <a
-  href="chrome://ubiquity/content/annotation_migration.html">Command
-  Feed Migration page</a>.  Sorry for the inconvenience!</p>
+  <h2 class="top">Thanks for trying out Ubiquity 0.2pre!</h2>
 
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
