Changed the about text to be that Ubiquity 0.1.3 was released! Changed the default skin to be the experimental one.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -93,13 +93,18 @@
 
 
 <div class="col-four">
-  <h2 class="top">Ubiquity 0.1.3 Release Candidate Released!</h2>
+  <h2 class="top">Ubiquity 0.1.3 Released!</h2>
 
-  <p>Thanks for trying out the latest release candidate.  If you're
-  wondering where your old command feed subscriptions went, check out
-  our handy <a
-  href="chrome://ubiquity/content/annotation_migration.html">Command
-  Feed Migration page</a>.  Sorry for the inconvenience!</p>
+  <p>Ubiquity 0.1.3 brings a range of new features to the board:</p>
+
+  <ul>
+    <li><b>New Look</b>: Ubiquity has a new, simpler look.</li>
+    <li><b>Skins</b>: Anyone can now give Ubiquity a new look. It's as simple as a <a href="https://wiki.mozilla.org/Labs/Ubiquity/Skins/">little bit of CSS</a>. Once you've created a skin, it's easy to <a href="https://wiki.mozilla.org/Labs/Ubiquity/Skins/#Sharing">share it</a> with the world: you can subscribe to skins just like you can subscribe to commands.</li>
+    <li><b>Speed</b>: Ubiquity is now much more snappy.</li>
+    <li><b>Relevancy</b>: Ubiquity makes it easier to issue the command your want, and the context menu is working again.</li>
+ </ul>
+ 
+ <p>Want to know more about what's changed? Read the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.3_Release_Notes">release notes</a>.</p>
 
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
