Applied stenington's typo fix in #461.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -101,7 +101,7 @@
     <li><b>New Look</b>: Ubiquity has a new, simpler look.</li>
     <li><b>Skins</b>: Anyone can now give Ubiquity a new look. It's as simple as a <a href="https://wiki.mozilla.org/Labs/Ubiquity/Skins/">little bit of CSS</a>. Once you've created a skin, it's easy to <a href="https://wiki.mozilla.org/Labs/Ubiquity/Skins/#Sharing">share it</a> with the world: you can subscribe to skins just like you can subscribe to commands.</li>
     <li><b>Speed</b>: Ubiquity is now much more snappy.</li>
-    <li><b>Relevancy</b>: Ubiquity makes it easier to issue the command your want, and the context menu is working again.</li>
+    <li><b>Relevancy</b>: Ubiquity makes it easier to issue the command you want, and the context menu is working again.</li>
  </ul>
  
  <p>Want to know more about what's changed? Read the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.3_Release_Notes">release notes</a>.</p>
