Brought back the copy linking to the command feed migration page that was accidentally removed in 542b604ae9de.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -103,6 +103,8 @@
     <li><b>Speed</b>: Ubiquity is now much more snappy.</li>
     <li><b>Relevancy</b>: Ubiquity makes it easier to issue the command you want, and the context menu is working again.</li>
  </ul>
+
+ <p>If you're wondering where your old command feed subscriptions went, check out our handy <a href="chrome://ubiquity/content/annotation_migration.html">Command Feed Migration page</a>. Sorry for the inconvenience!</p>
  
  <p>Want to know more about what's changed? Read the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.3_Release_Notes">release notes</a>.</p>
 
