Finished initial implementation of locked-down feed plugin.

--- a/ubiquity/chrome/content/locked-down-feed-plugin/example.html
+++ b/ubiquity/chrome/content/locked-down-feed-plugin/example.html
@@ -7,6 +7,7 @@
   <title>Example Locked-Down Feed Plugin Feed</title>
 </head>
 <body>
-This is an example Locked-Down Feed Plugin feed.
+This is an example Locked-Down Feed Plugin feed.  You can view the
+source code <a href="example.js">here</a>.
 </body>
 </html>
