Added a troubleshooting section to the about:ubiquity page which links to a new reset page that allows the user to reset ubiquity to its 'factory defaults' if it becomes totally unresponsive.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -57,7 +57,15 @@
   <p><strong>Help us</strong>. Subscribe to the <a href="https://ubiquity.mozilla.com/herd/command-feed/">Herd</a>, which will add your data to the <a href="https://ubiquity.mozilla.com/herd">dashboard</a></a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
     
 
-  
+  <h2>Troubleshooting Ubiquity</h2>
+
+  <p>Due to Ubiquity's unusual nature as a Labs experiment, you may
+  run into problems while using it.  If Ubiquity becomes completely
+  unresponsive to you, then it may be necessary to reset it to its
+  "factory defaults" in order to use it again.  To do this, click <a
+  href="reset.html">here</a>&mdash;and our apologies for the
+  inconvenience!</p>
+
   <h2>Developing Ubiquity</h2>
   <p><strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.</p>
   
