Added links to the Command API documentation, as well as adding some more documentation itself.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -67,8 +67,15 @@
   inconvenience!</p>
 
   <h2>Developing Ubiquity</h2>
-  <p><strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.</p>
   
+  <p style="background-color: #F2E78B; padding:8px;">
+  <strong>New</strong>: read the documentation for the <strong><a href="chrome://ubiquity/content/docs/overview.html">command utility APIs</a></strong>.
+  </p>
+  
+  <p>
+  <strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.
+  </p>
+    
   <p>Use the <a href="editor.html">command editor</a> to play around
   with <strong>creating new</strong> Ubiquity commands.  This isn't just a fun way to
   experiment with Ubiquity&mdash;it's actually a really easy way to
