--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -137,8 +137,10 @@
   <div class="col-three">
     <p>
       <strong>Read the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command authoring tutorial</a></strong> to learn more.
-      For examples of built-in commands, look <a href="resource://ubiquity/standard-feeds">here</a>,
-      for information on available utility functions for use in commands, look <a href="resource://ubiquity/feed-parts/header/cmdutils.js">here</a>.
+      For examples of built-in commands, look <a href="resource://ubiquity/standard-feeds">here</a>.
+    </p>
+    <p style="background-color: #F2E78B; padding:5px;">
+      <strong>New</strong>: Doucmentation for the <a href="chrome://ubiquity/content/docs/overview.html">command APIs</a>.
     </p>
   </div>
   
