--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="content">
 <div id="overview" class="documentation" style="display: none;">
-  <h1>Ubiquity Documentation</h1>
+  <h1>Ubiquity Code Documentation</h1>
   <p><b>Overview</b></p>
   <p><strong>We need your help!</strong>
   Contribute by documenting more of the code, and keeping it
