Changes to code display in subscribe page (see tickets #502 and #503)

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -23,7 +23,9 @@
         <div id="errorLongDesc">
           <p>Here is the JavaScript source code to the command:</p>
 
-          <div id="sourceCode"></div>
+          <div id="sourceCode" style="max-height: 40em; overflow: auto;">
+            <i>Loading code, please wait...</i>
+          </div>
 
           <p>If you understand JavaScript, you should read this and
             use your best judgement to decide whether the command is
