Initial documentation for LDFP.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -19,7 +19,11 @@
   <ul>
     <li><a href="#modules/utils.js">Utils</a></li>
     <li><a href="#feed-parts/header/cmdutils.js">CmdUtils</a></li>
+    <li><a href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
+    Plugin</a>
   </ul>
+  <p>If you're interested in creating a Feed Plugin, check out the
+  documentation for the proof-of-concept .</p>
 </div>
 </div>
 </body>
