Added file.html to chrome/content, which is a 'file redirector' that takes the user to the URL hash relative to ubiquity's root, e.g. chrome://ubiquity/content/file.html#index.html immediately redirects the user to file://path/to/ubiquity/root/index.html. This obviates the need for the jQuery-based 'patching' of anchor id's and allows us to more easily link to file-based URLs in the Ubiquity extension.
--HG--
extra : rebase_source : 9eb58d1fa9d5062fffe35ca8eb3d0c952d85c6b2

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -69,7 +69,7 @@
   <h2>Developing Ubiquity</h2>
   
   <p style="background-color: #F2E78B; padding:8px;">
-  <strong>New</strong>: read the documentation for the <strong><a id="docs">command APIs</a></strong>.
+  <strong>New</strong>: read the documentation for the <strong><a href="file.html#index.html">command APIs</a></strong>.
   </p>
   
   <p>
