--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -140,7 +140,7 @@
       For examples of built-in commands, look <a href="resource://ubiquity/standard-feeds">here</a>.
     </p>
     <p style="background-color: #F2E78B; padding:5px;">
-      <strong>New</strong>: Documentation for the <a id="docs">command APIs</a>.
+      <strong>New</strong>: Documentation for the <a href="file.html#index.html">command APIs</a>.
     </p>
   </div>
   
